--- a/readme.tex
+++ b/readme.tex
@@ -1,4 +1,4 @@
-% Created 2022-06-20 Mon 16:50
+% Created 2022-06-20 Mon 16:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[letter]{article}
 \usepackage[utf8]{inputenc}
@@ -46,6 +46,9 @@
 \begin{document}
 
 \maketitle
+Jesus Rodolfo Izurieta Veliz
+CI: 9860616
+
 Enlace del repositorio:
 
 \url{https://github.com/izurietajr/recuperatorio}
